--- a/app/src/main/res/layout/activity_1.xml
+++ b/app/src/main/res/layout/activity_1.xml
@@ -7,28 +7,12 @@
     android:background="@android:color/black"
     tools:context="com.example.alphabat69.tic_tac_toe.Activity1">
 
-    <ImageView
-        android:id="@+id/board"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/board"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.696"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tic-Tac-Toe"
+        android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="38dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,9 +22,10 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/board"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.12" />
 
     <ImageButton
         android:id="@+id/two"
@@ -55,7 +40,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.328"
-        app:srcCompat="@drawable/b"
         app:layout_constraintHorizontal_bias="0.916" />
 
     <ImageButton
@@ -70,8 +54,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.328"
-        app:srcCompat="@drawable/b" />
+        app:layout_constraintVertical_bias="0.328" />
 
     <ImageButton
         android:id="@+id/zero"
@@ -86,8 +69,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.328"
-        app:srcCompat="@drawable/b" />
+        app:layout_constraintVertical_bias="0.328" />
 
     <ImageButton
         android:id="@+id/three"
@@ -102,7 +84,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.584"
-        app:srcCompat="@drawable/b"
         app:layout_constraintHorizontal_bias="0.096" />
 
     <ImageButton
@@ -117,8 +98,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.584"
-        app:srcCompat="@drawable/b" />
+        app:layout_constraintVertical_bias="0.584" />
 
     <ImageButton
         android:id="@+id/five"
@@ -133,7 +113,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.584"
-        app:srcCompat="@drawable/b"
         app:layout_constraintHorizontal_bias="0.916" />
 
     <ImageButton
@@ -149,8 +128,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.837"
-        app:srcCompat="@drawable/b"
-        app:layout_constraintHorizontal_bias="0.096" />
+        app:layout_constraintHorizontal_bias="0.096"
+        />
 
     <ImageButton
         android:id="@+id/seven"
@@ -165,7 +144,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.837"
-        app:srcCompat="@drawable/b" />
+        />
 
     <ImageButton
         android:id="@+id/eight"
@@ -180,7 +159,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.837"
-        app:srcCompat="@drawable/b"
         app:layout_constraintHorizontal_bias="0.916" />
 
 </android.support.constraint.ConstraintLayout>
